Fixed world panel overflow (#891)

--- a/app/assets/css/app.scss
+++ b/app/assets/css/app.scss
@@ -7497,6 +7497,9 @@ body.sorting ul.collapsedSortTarget {
 
 			dl.form {
 				padding-bottom: 0;
+				dd {
+					overflow: hidden;
+				}
 			}
 
 			dl.form .GridVania,
